feat(marketplace): serialize create-listing, add withdraw-bid, my-listings RPC (I-0YXG6-1)
